--- a/bootstrap.html
+++ b/bootstrap.html
@@ -2,57 +2,139 @@
 <html>
   <head>
     <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-
+    <link rel="stylesheet" href="bootstrap-style.css" type="text/css" />
     <meta charset="utf-8">
     <title>Boostrap Challenge</title>
   </head>
-  <body>
-    <nav class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Brand</a>
-      </div>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-      </ul>
+  <body background="matrix.png">
+    <nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="https://www.learnacademy.org/">LEARN</a>
     </div>
-    </nav>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="https://www.javascript.com/" target="_blank" >JavaScript</a></li>
+        <li><a href="https://www.w3schools.com/html/" target="_blank" >HTML</a></li>
+        <li><a href="https://www.w3schools.com/css/" target="_blank" >CSS</a></li>
+        <li><a href="https://www.ruby-lang.org/en/" target="_blank">Ruby</a></li>
+        <li><a href="http://php.net/manual/en/intro-whatis.php" target="_blank">PHP</a></li>
+        <li><a href="http://www.cplusplus.com/" target="_blank">C++</a></li>
+        <li><a href="https://docs.microsoft.com/en-us/dotnet/csharp/programming-guide/" target="_blank">C#</a></li>
+        <li><a href="https://www.python.org/" target="_blank">Python</a></li>
+        <li><a href="https://golang.org/" target="_blank">GO</a></li>
+        <li><a href="https://www.java.com/en/" target="_blank">Java</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
     <div class="container">
       <div class="jumbotron">
-      <h1>Hello Dave</h1>
+      <h1>Top 10 Coding Languages</h1>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-xs-1">1</div>
-        <div class="col-xs-1">2</div>
-        <div class="col-xs-1">3</div>
-        <div class="col-xs-1">4</div>
-        <div class="col-xs-1">5</div>
-        <div class="col-xs-1">6</div>
-        <div class="col-xs-1">7</div>
-        <div class="col-xs-1">8</div>
-        <div class="col-xs-1">9</div>
-        <div class="col-xs-1">10</div>
-        <div class="col-xs-1">11</div>
-        <div class="col-xs-1">12</div>
+        <div class="col-sm-5 box">
+          <img class="logo" src="http://via.placeholder.com/120x120"></a>
+          <h5 class="text">JavaScript</h5>
+          <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque blandit turpis turpis, quis cursus nisi scelerisque pharetra.
+          </p>
+        </div>
+        <div class="col-sm-2"></div>
+        <div class="col-sm-5 box">
+          <img class="logo" src="http://via.placeholder.com/120x120"></a>
+          <h5 class="text">HTML</h5>
+          <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque blandit turpis turpis, quis cursus nisi scelerisque pharetra.
+          </p>
+        </div>
       </div>
-    </div>
+      <div class="row">
+        <div class="col-sm-5 box">
+          <img class="logo" src="http://via.placeholder.com/120x120"></a>
+          <h5 class="text">CSS</h5>
+          <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque blandit turpis turpis, quis cursus nisi scelerisque pharetra.
+          </p>
+        </div>
+        <div class="col-sm-2"></div>
+        <div class="col-sm-5 box">
+          <img class="logo" src="http://via.placeholder.com/120x120"></a>
+          <h5 class="text">Ruby</h5>
+          <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque blandit turpis turpis, quis cursus nisi scelerisque pharetra.
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-5 box">
+          <img class="logo" src="http://via.placeholder.com/120x120"></a>
+          <h5 class="text">PHP</h5>
+          <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque blandit turpis turpis, quis cursus nisi scelerisque pharetra.
+          </p>
+        </div>
+        <div class="col-sm-2"></div>
+        <div class="col-sm-5 box">
+          <img class="logo" src="http://via.placeholder.com/120x120"></a>
+          <h5 class="text">C++</h5>
+          <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque blandit turpis turpis, quis cursus nisi scelerisque pharetra.
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-5 box">
+          <img class="logo" src="http://via.placeholder.com/120x120"></a>
+          <h5 class="text">C#</h5>
+          <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque blandit turpis turpis, quis cursus nisi scelerisque pharetra.
+          </p>
+        </div>
+        <div class="col-sm-2"></div>
+        <div class="col-sm-5 box">
+          <img class="logo" src="http://via.placeholder.com/120x120"></a>
+          <h5 class="text">Python</h5>
+          <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque blandit turpis turpis, quis cursus nisi scelerisque pharetra.
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-5 box">
+          <img class="logo" src="http://via.placeholder.com/120x120"></a>
+          <h5 class="text">GO</h5>
+          <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque blandit turpis turpis, quis cursus nisi scelerisque pharetra.
+          </p>
+        </div>
+        <div class="col-sm-2"></div>
+        <div class="col-sm-5 box">
+          <img class="logo" src="http://via.placeholder.com/120x120"></a>
+          <h5 class="text">Java</h5>
+          <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque blandit turpis turpis, quis cursus nisi scelerisque pharetra.
+          </p>
+        </div>
+      </div>
+
+    </div> <!-- end container div -->
 
     <script
       src="http://code.jquery.com/jquery-3.2.1.min.js"
@@ -62,4 +144,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
+  <footer class="footer">
+    <h4>Copyright ECHO &copy; 2017</h4>
+  </footer>
 </html>
